ajax image upload

--- a/ajaxImageUpload/index.html
+++ b/ajaxImageUpload/index.html
@@ -24,6 +24,7 @@
 
     </div>
   <a href="http://www.gouguoyin.cn/js/141.html/#comment">支持服务端上传、预览、删除和上传数量及大小限制的原创jQuery图片上传插件</a>
+  <a href="http://www.thinkphp.cn/code/1537.html">支持服务端上传、预览、删除和上传数量及大小限制的原创jQuery图片上传插件</a>
 </div>
 
 <script src="./js/jquery.js"></script>
